# OpenFSW

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi.cmake
docs/: README.md  firmware.md  ground.md  simulation.md  validation.md
flight/adcs/: adcs-controller.adb  adcs-controller.ads  adcs.adb  adcs.ads
flight/boot/: boot.c  boot.h  startup.S
flight/comms/: telecommand.c  telecommand.h  telemetry.c  telemetry.h
flight/comms/beacon/: beacon.c  beacon.h
flight/comms/ccsds/: ccsds.c  ccsds.h
flight/core/: boot.h  bsp.h  health.h  openfsw.h  rtos.h  scheduler.h  system.c  system.h
flight/core/health/: health.c  health_monitor.c  health_monitor.h
flight/core/logging/: event_log.c  event_log.h  logger.c  logger.h
flight/core/mode/: mode_manager.c  mode_manager.h
flight/core/scheduler/: scheduler.c
flight/core/time/: time_manager.c  time_manager.h
flight/drivers/: bsp.h  bsp_generic.c  bsp_stm32f4.c
flight/drivers/gpio/: gpio.c  gpio.h
flight/drivers/i2c/: i2c.c  i2c.h
flight/drivers/spi/: spi.c  spi.h
flight/drivers/uart/: uart.c  uart.h
flight/eps/: eps.c  eps.h
flight/fdir/: fdir.c  fdir.h
flight/osal/: osal.h  osal_freertos.c
flight/rtos/: FreeRTOSConfig.h  freertos_hooks.c  port_compat.c  rtos.h  rtos_freertos.c
ground/examples/: __init__.py  ground_example.py
ground/telecommand/: __init__.py  command_builder.py  command_scheduler.py  packet_encoder.py
ground/telemetry/: __init__.py  archive.py  housekeeping.py  packet_decoder.py  telemetry_processor.py
include/openfsw/: config.h  health.h  rtos.h
linker/: linker.ld
simulation/: __init__.py
simulation/actuators/: __init__.py  magnetorquer.py  reaction_wheel.py
simulation/core/: __init__.py  config.py  simulator.py  spacecraft.py  time_manager.py
simulation/dynamics/: __init__.py  attitude.py  integrators.py  orbital.py
simulation/environment/: __init__.py  atmosphere.py  eclipse.py  ground_station.py  magnetic_field.py  sun.py
simulation/examples/: __init__.py  run_simulation.py
simulation/models/: __init__.py  link_budget.py  power_model.py  spacecraft_model.py  thermal_model.py
simulation/scenarios/: __init__.py  detumble.py  eclipse.py  ground_pass.py  nominal.py  safe_mode.py
simulation/sensors/: __init__.py  gps.py  gyroscope.py  magnetometer.py  sun_sensor.py
src/boot/: boot.c  startup_arm_cm.S
src/bsp/stm32f4/: bsp_stm32f4.c
src/health/: health.c
src/rtos/: rtos_freertos.c
src/rtos/freertos/: freertos_hooks.c
tests/unit/: test_ground_packets.py  test_sim_quaternion.py
tools/: run_all.py
